--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "node-sass": "^5.0.0"
+    "node-sass": "^5.0.0",
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
-    "start": "npx webpack serve",
-    "scss:css": "node-sass ./src/sass/main.scss ./css/index.css -w"
+    "start": "npm-run-all scss:css start-dev --parallel",
+    "scss:css": "node-sass ./src/sass/main.scss ./css/index.css -w",
+    "start-dev": "live-server"
   },
   "keywords": [],
   "author": "",
